add link to documentation on the demo page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<h1>onVisible</h1>
 		<p>Trigger an event when elements become visibles.</p>
+		<p>Read the <a href="https://github.com/madef/onVisible/blob/master/README.md">documentation</a></p>
 		<div id="log"></div>
 		<div class="event">#1</div>
 		<div class="event">#2</div>
